[package]
name = "quantifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
cfg-if = "1.0.0"
walkdir = "2.3.3"

[target.'cfg(windows)'.dependencies]
output_vt100 = "0.1.3"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
